Updated Div section in HTML to include image and correct ids

--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
     <input id="idAddress" /> <br />
     <button onclick="idCard()">Get ID Card</button>
 
-    <div id="personInfo">
-      First Name:
-      <p id="firstNameOutput"></p>
-      <br />
-      Last Name:
-      <p id="lastNameOutput"></p>
-      <br />
-      Age:
-      <p id="idAgeOutput"></p>
-      <br />
+    <div id="idCard">
+      <img
+        src="http://www.iconninja.com/files/373/611/612/person-user-profile-male-man-avatar-account-icon.svg"
+      />
+
+      <p id="postFullName"></p>
+
+      <p id="postAge"></p>
+
+      <p id="postPhoneNumber"></p>
+
+      <p id="postAddress"></p>
     </div>
     <script src="script.js"></script>
   </body>
