Updating JS, Testing for input values to show back

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     Last Name: <br />
     <input id="lastName" /> <br />
     Age: <br />
-    <input id="idAge" /> <br />
+    <input id="age" /> <br />
     Phone Number: <br />
     <input id="phoneNumber" /> <br />
     Address: <br />
-    <input id="idAddress" /> <br />
+    <input id="address" /> <br />
     <button onclick="idCard()">Get ID Card</button>
 
     <div id="idCard">
