adjusting to include more functionality

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <p></p>
-    <h1>Let's Create an ID Card!</h1>
-    First Name: <br />
-    <input id="firstName" /> <br />
-    Last Name: <br />
-    <input id="lastName" /> <br />
-    Age: <br />
-    <input id="age" /> <br />
-    Phone Number: <br />
-    <input id="phoneNumber" /> <br />
-    Address: <br />
-    <input id="address" /> <br />
-    <button onclick="idCard()">Get ID Card</button>
+    <section>
+      <h1>Let's Create an ID Card!</h1>
+      First Name: <br />
+      <input id="firstName" /> <br />
+      Last Name: <br />
+      <input id="lastName" /> <br />
+      Age: <br />
+      <input id="age" /> <br />
+      Phone Number: <br />
+      <input id="phoneNumber" /> <br />
+      Address: <br />
+      <input id="address" /> <br />
+      <button onclick="idCard()">Get ID Card</button>
+    </section>
 
     <div id="idCard">
       <img
